# opnsense-secops

./: .env.example  .gitignore  CVE_INTEGRATION.md  Dockerfile  FEATURES.md  NAECHSTE_SCHRITTE.md  PROJEKTSTRUKTUR.md  PROJEKT_UEBERSICHT.md  QUICKSTART.md  README.md  README_DE.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: docker-build.yml  lint-test.yml
config/: exceptions.yaml  rules.yaml
scripts/: README.md  compare-scans.sh  scheduled-scan.sh
src/: __init__.py  config_loader.py  main.py  opnsense_client.py  report_generator.py
src/analyzers/: _utils.py  certificate_analyzer.py  dns_analyzer.py  firewall_analyzer.py  gateway_analyzer.py  ipv6_parity_analyzer.py  network_discovery.py  optimal_config_generator.py  port_scanner.py  radvd_analyzer.py  system_security_analyzer.py  vlan_analyzer.py  vulnerability_scanner.py
src/web/: app.py  translations.json
src/web/static/css/: netsec.css  style.css
src/web/static/js/: app.js  netsec.js
src/web/templates/: index.html
tests/: test_gateway_radvd.py  test_icmpv6_analyzer.py  test_ipv6_parity.py  test_normalize_rules.py  test_opnsense_client.py  test_web_security.py
